			wxFormBuilder ChangeLog
********************************************************************************
01/24/2014 Version 3.04.02 (Beta)
* #126 wxWidgets > 2.8 compile fix (patch by sodev)
* #127 Wrong parent passed to IComponent::OnCreated() (patch by sodev)
* #128 Object Inspector expansion fix (patch by sodev)
* #129 Support for statusbar plugins (patch by sodev)

11/12/2013 Version 3.04.01 (Beta)
* Fixed build error with wxWidgets 3.0.0.
^ Removed borders from designer frame/dialog/panel when built with wxWidgets 2.9 or later
  under wxGTK.

05/10/2013 Version 3.04.00 (Beta)
+ Added support for wxLUA code generation.

03/21/2013 Version 3.03.05 (Beta)
* Fixed various issues when built with wxWidgets 2.9.x and later.
+ Added support for wxInfoBar widget ( when built with wxWidgets 2.9.4 and later ).
+ Added support for wxPropertyGrid and wxPropertyGridManager widgets ( when built with wxWidgets 2.9.4 and later ).
+ Added support for wxStyledTextCtrl widget ( when built with wxWidgets 2.9.4 and later ).
+ Added support for wxTimer non-visual object.
* Fixed "default" font family in generated XRC under wxWidgets 2.9.x and later.
* Fixed minor visual issues under wxWidgets 2.9.x and later.
+ Added XRC code generation for wxAuiNotebook ( when built with wxWidgets 2.9.5 and later ).
+ Added support for bitmaps in XRC code generated for wxNotebook.

10/07/2012 Version 3.03.04 (Beta)
* ID: 3519419 - Create inherited class bracket error.
* Fixed code generation for PHP wxSplitterWindow wxEVT_IDLE.
* Fixed "scrollbar jump" in Object Inspector occured if wxFB built with wxWidgets 2.9.x and later.
* ID: 3536076, 3536080 - Sub-class behaviour changed 3.2 to 3.3
* ID: 3556216 - Missing field <scrollrate> in generated XRC
* ID: 3530800 - wxTextCtrl "maxlenght"
* ID: 3142678 - Adds 'public' to python class when doing 'subclass'

04/06/2012 Version 3.03.03 (Beta)
* ID: 3510480 - Subclass not displayed after reloading a project in 3.3.2.